--- a/frontend/webapp/today.html
+++ b/frontend/webapp/today.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Traini</title>
+		<title>Train.me</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
